--- a/book/templates/login_page.html
+++ b/book/templates/login_page.html
@@ -15,7 +15,7 @@
 	{% if from.errors %}
 			<p>sorry. That's not a valid user</p>
 	{% endif %}
-	<form  method="post" action="{% url 'check' %}">{% csrf_token %}
+	<form> {% csrf_token %}
 			<label for="username"> user Name</label>
 			<input type="text" id="user" name="username" placeholder="username"></input>
 			<label for="password">password</label>
