invalid user template

--- a/book/templates/login_page.html
+++ b/book/templates/login_page.html
@@ -16,9 +16,9 @@
 			<p>sorry. That's not a valid user</p>
 	{% endif %}
 	<form> {% csrf_token %}
-			<label for="username"> user Name</label>
-			<input type="text" id="user" name="username" placeholder="username"></input>
-			<label for="password">password</label>
+			<label for="username">UserName</label>
+			<input type="text" id="user" name="username" placeholder="Please enter the username"></input>
+			<label for="password">Password</label>
 			<input type="password" id="user" name="password" placeholder="password"></input>
 			<input type="submit" value ="login" ></input>
 	</form>
